--- a/src/index.css
+++ b/src/index.css
@@ -15,19 +15,29 @@
 }
 
 .input{
-  width: 40%;
-  height: 95%;
+  width: 100%;
+  height: 85%;
   /* margin-right: auto; */
   border: 1px solid blue;
   /* display: flex; */
   /* align-items: center; */
   justify-content: center;
   /* flex-direction: column; */
+  overflow-y: scroll;
+
+  padding: 10px;
   }
+
 .output{
   width: 40%;
   /* margin-right: auto; */
   border: 1px solid blue;
+ }
+
+ .input-container{
+  border: 2px solid black;
+  width: 40%;
+  height: 95%;
  }
 
  .input-label{
@@ -42,15 +52,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 50px auto 50px auto;
+  margin: 10px auto 20px auto;
  }
 
  .file-item{
   background-color: aquamarine;
   height: 50px;
-  width: 500px;
+  /* width: 500px; */
   padding: 5px;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   margin: 10px;
   outline: 1px solid black;
   display: flex;
