--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,9 @@
 .input{
   width: 100%;
   height: 85%;
-  /* margin-right: auto; */
+
   border: 1px solid blue;
-  /* display: flex; */
-  /* align-items: center; */
-  justify-content: center;
-  /* flex-direction: column; */
+
   overflow-y: scroll;
 
   padding: 10px;
@@ -56,20 +53,48 @@
  }
 
  .file-item{
-  background-color: aquamarine;
+  background-color: rgb(127, 236, 255);
   height: 50px;
-  /* width: 500px; */
+  width: 95%;
   padding: 5px;
   font-size: 1.1rem;
   margin: 10px;
   outline: 1px solid black;
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   margin: 0px auto 20px auto;
  }
 
+ .file-name{
+  background-color: rgb(127, 255, 227);
+  width: 70%;
+  margin-right: 10px;
+ }
+
+ .file-delete{
+  margin-left: auto;
+  background-color: rgb(255, 66, 66);
+  width: 50px;
+  height: 30px;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor:pointer;
+ }
+ .page-no{
+  background-color: rgb(248, 185, 90);
+  width: 50px;
+  height: 30px;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+ }
  .pdf-doc{
   height: 100%;
   width: 100%;
  }
+
