--- a/src/index.css
+++ b/src/index.css
@@ -1,44 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
+
 *{
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
+
+body{
+  background-color: #FCF9BE;
 }
 
 
 .app-container{
   display: flex;
-  border: 2px solid red;
+  /* border: 2px solid red; */
+  background-color: #E8F3D6;
+  box-shadow: 2px 2px 5px 2px rgb(204, 204, 204);
   height: 90vh;
   width: 90vw;
   margin: 50px auto;
   justify-content: space-around;
+  padding: 20px;
 }
 
 .input{
   width: 100%;
   height: 85%;
 
-  border: 1px solid blue;
-
-  overflow-y: scroll;
-
+  /* border: 1px solid blue; */
+  background-color: #FFDCA9;
+  border: 1px solid black;
+  overflow-y:auto;
+  border-radius: 5px;
   padding: 10px;
   }
 
 .output{
-  width: 40%;
+  width: 45%;
+  height: 98%;
   /* margin-right: auto; */
-  border: 1px solid blue;
+  border: 1px solid black;
+  background-color: #FFDCA9;
+  border-radius: 5px;
  }
 
  .input-container{
-  border: 2px solid black;
+  /* border: 2px solid black; */
   width: 40%;
   height: 95%;
  }
 
  .input-label{
-  background-color: bisque;
+  background-color: #dbeebc;
   height: 50px;
   width: 200px;
   text-align: center;
@@ -50,10 +64,11 @@
   align-items: center;
   justify-content: center;
   margin: 10px auto 20px auto;
+  border-radius: 5px;
  }
 
  .file-item{
-  background-color: rgb(127, 236, 255);
+  background-color: #FAAB78;
   height: 50px;
   width: 95%;
   padding: 5px;
@@ -63,18 +78,20 @@
   display: flex;
   align-items: center;
   /* justify-content: center; */
-  margin: 0px auto 20px auto;
+  margin: 10px auto 20px auto;
+  /* box-shadow: 2px 2px 7px 2px rgb(212, 212, 212); */
+  border-radius: 5px;
  }
 
  .file-name{
-  background-color: rgb(127, 255, 227);
+  /* background-color: rgb(127, 255, 227); */
   width: 70%;
   margin-right: 10px;
  }
 
  .file-delete{
   margin-left: auto;
-  background-color: rgb(255, 66, 66);
+  /* background-color: rgb(255, 66, 66); */
   width: 50px;
   height: 30px;
   font-size: 15px;
@@ -82,9 +99,10 @@
   align-items: center;
   justify-content: center;
   cursor:pointer;
+  border-radius: 5px;
  }
  .page-no{
-  background-color: rgb(248, 185, 90);
+  /* background-color: rgb(248, 185, 90); */
   width: 50px;
   height: 30px;
   font-size: 15px;
