--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,9 @@ body{
   border: 1px solid black;
   background-color: #FFDCA9;
   border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
  }
 
  .input-container{
@@ -114,5 +117,15 @@ body{
  .pdf-doc{
   height: 100%;
   width: 100%;
+ }
+
+
+
+/* 
+mix blend mode filter
+*/
+.output img{
+  border-radius: 5px;
+  mix-blend-mode: multiply; 
  }
 
