--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ body{
 
  .file-name{
   /* background-color: rgb(127, 255, 227); */
-  width: 70%;
+  width: 60%;
   margin-right: 10px;
  }
 
@@ -120,12 +120,13 @@ body{
  }
  .page-no{
   /* background-color: rgb(248, 185, 90); */
-  width: 50px;
+  width: 80px;
   height: 30px;
-  font-size: 15px;
+  font-size: .8em;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 20px;
 
  }
  .pdf-doc{
