--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,25 @@ body{
   cursor:pointer;
   border-radius: 5px;
  }
+.file-delete:hover{
+  color: red;
+}
+
+.rotate-pdf{
+  width: 50px;
+  height: 30px;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor:pointer;
+  border-radius: 5px;
+}
+
+.rotate-pdf:hover{
+  color: rgb(78, 78, 255);
+}
+
  .page-no{
   /* background-color: rgb(248, 185, 90); */
   width: 80px;
@@ -126,7 +145,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 20px;
+  margin-left: 10px;
  }
 
  .list-no{
@@ -193,3 +212,4 @@ mix blend mode filter
   align-items: center;
   justify-content: center;
 }
+
