--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,18 @@ body{
   margin-right: 10px;
  }
 
+ .file-name:hover{
+  cursor: move; /* fallback if grab cursor is unsupported */
+  cursor: grab;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+ }
+ .file-name:active{
+  cursor: grabbing;
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;
+ }
+
  .file-delete{
   margin-left: auto;
   /* background-color: rgb(255, 66, 66); */
@@ -213,3 +225,16 @@ mix blend mode filter
   justify-content: center;
 }
 
+
+/* placeholder for dragging file item if dragging state is true */
+.dragging{
+  background-color: #FFDCA9;
+  z-index: 10;
+  /* display: none; */
+  height: 50px;
+  width: 95%;
+  padding: 5px;
+  color: #FFDCA9;
+  box-shadow: 2px 2px 10px 5px rgb(187, 158, 116) inset;
+  
+}
