--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+ 
  }
 
  .input-container{
@@ -82,6 +83,7 @@ body{
  .input-label-placeholder{
   height: 50px;
   width: 200px;
+ 
  }
 
  .file-item{
@@ -182,11 +184,15 @@ mix blend mode filter
 */
 .output img{
   border-radius: 5px;
-  mix-blend-mode: multiply; 
+  mix-blend-mode: multiply;
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
+  
  }
 
 .input-placeholder{
-  font-size: 3.2rem;
+  font-size: 3.2vw;
   color: #524738;
   width: 100%;
   text-align: center;
@@ -195,6 +201,7 @@ mix blend mode filter
   outline: 2px dashed black;
   outline-offset: -.2em;
   padding: 1.2em;
+  word-wrap:break-word;
 }
 
 .input-placeholder:hover{
