--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ body{
   /* border: 2px solid black; */
   width: 40%;
   height: 95%;
+
  }
 
  .input-label{
@@ -100,12 +101,16 @@ body{
   margin: 10px auto 20px auto;
   /* box-shadow: 2px 2px 7px 2px rgb(212, 212, 212); */
   border-radius: 5px;
+  
  }
 
  .file-name{
   /* background-color: rgb(127, 255, 227); */
   width: 60%;
   margin-right: 10px;
+  overflow:hidden;
+  height: 100%;
+  
  }
 
  .file-name:hover{
